# OpenFusionLauncher

./: .eslintrc.json  .gitignore  .gitmodules  .prettierignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: rust.yml
app/: AboutModal.tsx  AlertBox.tsx  AlertList.tsx  BackgroundImages.tsx  Button.tsx  DeleteServerModal.tsx  EditServerModal.tsx  GameBuildsList.tsx  LauncherPage.tsx  LoadingScreen.tsx  LoginModal.tsx  LogoImages.tsx  NavBar.tsx  SelectVersionModal.tsx  ServerList.tsx  contexts.ts  easter-eggs.ts  i18n-keys.d.ts  i18n.tsx  layout.tsx  page.tsx  seed.ts  types.ts  types.tsx  util.ts
app/builds/: page.tsx
app/components/: AboutModal.tsx  AlertBox.tsx  AlertList.tsx  BackgroundImages.tsx  Button.tsx  ConfirmationModal.tsx  DeleteServerModal.tsx  EasterEggs.tsx  EditProfileModal.tsx  EditServerModal.tsx  ForgotPasswordModal.tsx  GameBuildsList.tsx  GameBuildsTab.tsx  LanguageSwitcher.tsx  LauncherPage.tsx  LoadingScreen.tsx  LoginModal.tsx  LogoImages.tsx  NavBar.tsx  SelectVersionModal.tsx  ServerList.tsx  TitleBar.tsx  Toast.tsx  Toasts.tsx
app/css/: bootstrap.scss  openfusion-behavior.scss  openfusion-layout.scss  openfusion-theming.scss  openfusion.css
app/locales/: en.json  ru.json
app/settings/: AddBuildModal.tsx  AuthenticationList.tsx  AuthenticationTab.tsx  GameBuildsList.tsx  GameBuildsTab.tsx  GameSettingsTab.tsx  LauncherSettingsTab.tsx  ManageAccountModal.tsx  RemoveBuildModal.tsx  SettingControl.tsx  SettingControlBase.tsx  SettingControlBrowse.tsx  SettingControlDropdown.tsx  SettingControlFpsFix.tsx  SettingControlText.tsx  SettingControlWindowSize.tsx  SettingsHeader.tsx  page.tsx
resources/defaults/: config.json  servers.json
resources/defaults/versions/: beta-20100104.json  beta-20100119.json  beta-20100207.json  beta-20100307.json  beta-20100322.json  beta-20100413.json  beta-20100502.json  beta-20100524.json  beta-20100604.json  beta-20100616.json  beta-20100711.json  beta-20100728.json  beta-20100909.json  beta-20101003.json  beta-20101011.json  beta-20101028.json  beta-20101123.json  beta-20110213.json  beta-20110314.json  beta-20110330.json  beta-20110424.json  beta-20110523.json  beta-20110725.json  beta-20110818.json  beta-20110912.json  beta-20111013.json
resources/locales/: en.json  ru.json
scripts/: generate-i18n-types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/defaults/: config.json
src-tauri/src/: config.rs  endpoint.rs  lib.rs  main.rs  state.rs  util.rs
