[package]
name = "openfusionlauncher"
version = "1.0.0"
description = "OpenFusionLauncher"
authors = ["OpenFusion Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scamper"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.2", features = [] }
tauri-plugin-log = "2.0.0-rc"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
dns-lookup = "2.0.4"
fs_extra = "1.3.0"
tokio = { version =  "1.41.1", features = ["sync"] }
